fix(components): resolve incorrect z-index values #4504 (#4505)

--- a/src/BlazorUI/Demo/Client/Shared/Pages/Components/Overlay/BitOverlayDemo.razor.scss
+++ b/src/BlazorUI/Demo/Client/Shared/Pages/Components/Overlay/BitOverlayDemo.razor.scss
@@ -43,7 +43,7 @@
 
 ::deep {
     .overlay {
-        z-index: 9999;
+        z-index: 10;
         align-items: center;
         justify-content: center;
         background-color: $bit-color-background-callout;
