--- a/src/BlazorUI/Demo/Client/Shared/Shared/Header.razor.scss
+++ b/src/BlazorUI/Demo/Client/Shared/Shared/Header.razor.scss
@@ -7,7 +7,7 @@
 .header {
     top: 0;
     width: 100%;
-    z-index: 10001;
+    z-index: 11;
     position: fixed;
     backdrop-filter: blur(20px);
     box-shadow: $bit-box-shadow-1;
